--- a/.github/workflows/main_testingwebapplication01.yml
+++ b/.github/workflows/main_testingwebapplication01.yml
@@ -43,7 +43,8 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write #This is required for requesting the JWT hello
+
 
     steps:
       - name: Download artifact from build job
