--- a/.github/workflows/main_testingwebapplication01.yml
+++ b/.github/workflows/main_testingwebapplication01.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - testingwebapplication01
+name: Node.js CI/CD to Azure Web App
 
 on:
   push:
@@ -10,62 +7,45 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: '16.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run build
+        run: npm run build --if-present
+
+      - name: Run tests
+        run: npm test
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip .
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+      - name: Login to Azure
+        uses: azure/login@v1
         with:
-          name: node-app
-          path: release.zip
+          creds: |
+            {
+              "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
+              "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
+              "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
+              "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
+            }
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT hello
-
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      #- name: Login to Azure
-       # uses: azure/login@v1
-        ## client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DC5C2F5710FF47D1890A626A2CE91602 }}
-          #tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_9FFDAF8F633E4462835FF87526B80A42 }}
-          #subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_5846A1EDC5E44A2595CCF836405BC396 }}
-
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'testingwebapplication01'
-          slot-name: 'Production'
-          package: .
-          
+          app-name: 'testingwebapplication01' # Replace with your Azure Web App name
+          package: release.zip
+
+      - name: Azure Logout
+        run: az logout
