--- a/.github/workflows/main_testingwebapplication01.yml
+++ b/.github/workflows/main_testingwebapplication01.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'testingwebapplication01' # Replace with your Azure Web App name
+          app-name: 'testingwebapplication01' # Replace with your actual Azure Web App name
           package: release.zip
 
       - name: Azure Logout
